Action button: Fix truncation of many labels in legacy screens
.. by removing left/right padding.

--- a/org.csstudio.display.builder.representation.javafx/src/org/csstudio/display/builder/representation/javafx/opibuilder.css
+++ b/org.csstudio.display.builder.representation.javafx/src/org/csstudio/display/builder/representation/javafx/opibuilder.css
@@ -18,3 +18,19 @@
 {
     -fx-font-weight:bold;
 }
+
+/* Default button padding in modena.css:
+ * .button
+ * {
+ *  -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; (top right bottom left)
+ * }
+ * Compared to BOY, this reduces many button "labels" to "lab...".
+ * Since button labels are centered anyway,
+ * setting the left and right padding to 0em makes no visual
+ * difference for shorter labels, while at the same time allowing
+ * for labels that are as wide as the button.
+ */
+.action_button
+{
+   -fx-padding: 0.333333em 0em 0.333333em 0em;
+}
